RESOLVED FIXED49286
[Chromium] http/tests/security/XFrameOptions fail with Chromium DRT
https://bugs.webkit.org/show_bug.cgi?id=49286
Summary [Chromium] http/tests/security/XFrameOptions fail with Chromium DRT
Mihai Parparita
Reported 2010-11-09 16:17:18 PST
[Chromium] http/tests/security/XFrameOptions fail with Chromium DRT
Attachments
Patch (2.17 KB, patch)
2010-11-09 16:20 PST, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2010-11-09 16:20:02 PST
Mihai Parparita
Comment 2 2010-11-09 16:44:56 PST
Comment on attachment 73433 [details] Patch Commit queue seems hung, will land this by hand.
Mihai Parparita
Comment 3 2010-11-09 16:46:53 PST
Comment on attachment 73433 [details] Patch Clearing flags on attachment: 73433 Committed r71699: <http://trac.webkit.org/changeset/71699>
Mihai Parparita
Comment 4 2010-11-09 16:46:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.